<resources>
    <string name="app_name">HwaJilGuJi</string>
    <string name="restart">처음으로</string>
    <string name="addObject">추가</string>
    <string name="superResolutionDecision">해상도조정</string>
    <string name="otherWorks">OtherWorks</string>
    <string name="move">이동</string>
    <string name="Rotate">회전</string>
    <string name="FreeCrop">자르기</string>
    <string name="Transparent">투명도</string>
    <string name="SuperResolution">SR</string>
    <string name="RectCrop">크롭</string>
    <string name="removeView">삭제</string>
    <string name="save">저장</string>
    <string name="gallery">갤러리</string>
    <string name="sr">해상도 보정</string>
    <string name="etc">편집</string>
    <string name="erase">지우기</string>
    <string name="blur">블러</string>
    <string name="width">크기</string>
    <string name="range">영역을 지정해주세요!</string>
    <string name="configuration">설정</string>
    <string name="camera">카메라</string>
    <string name="loading">이미지 불러오기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--  banner  -->
    <string name="label_loading">This Is Empty View</string>

    <!-- Main SR  -->
    <string name="loadImg">불러오기</string>

</resources>
