<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProcessActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragmentField"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/preprocessMain"
            android:weightSum="8">
            <FrameLayout
                android:id="@+id/preprocessMainLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:orientation="vertical"
                >
            </FrameLayout>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/addObjectBtn"
                        android:text="@string/addObject"
                        />
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/objectMoveBtn"
                        android:text="@string/move"
                        />
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/objectRotateBtn"
                        android:text="@string/Rotate"
                        />
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/freeCropBtn"
                        android:text="@string/FreeCrop"
                        />
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/rectCropBtn"
                        android:text="@string/RectCrop"
                        />
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/superResolutionBtn"
                        android:text="@string/SuperResolution"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/removeActiveView"
                        android:text="@string/removeView"
                        />
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/btn"
                        android:text="nextPage"/>
                    <ImageView
                        android:id="@+id/testImgView2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="#000000"
                        />

                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>